--- a/c program.html
+++ b/c program.html
@@ -16,8 +16,8 @@
     <br>
    <h2 class="head"> UNIT I C PROGRAMMING FUNDAMENTALS 9</h2>
 <p>Data Types – Variables – Operations – Expressions and Statements – Conditional Statements – Functions –
-     Recursive Functions – Arrays – Single and Multi-Dimensional Arrays.<br><a href="">Read more...</a></p>
-<h2 class="head">UNIT II C PROGRAMMING - ADVANCED FEATURES 9</h2>
+     Recursive Functions – Arrays – Single and Multi-Dimensional Arrays.<br><a href="./unit 1 c program.html">Read more...</a></p>
+   <h2 class="head">UNIT II C PROGRAMMING-ADVANCED FEATURES</h2>
 <p>Structures – Union – Enumerated Data Types – Pointers: Pointers to Variables, Arrays and Functions –
      File Handling – Preprocessor Directives.<br><a href="">Read more...</a></p>
 <h2 class="head">UNIT III LINEAR DATA STRUCTURES 9</h2>
